# card-counter

./: Cargo.toml  README.md
.github/workflows/: docs.yml
examples/: basic.rs
src/: bet.rs  card.rs  hand.rs  lib.rs  shoe.rs  table.rs
tests/: basic.rs  bet.rs
